--- a/static/app/styles/simple-sidebar.css
+++ b/static/app/styles/simple-sidebar.css
@@ -26,7 +26,8 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    /*background: #000;*/
+    background: linear-gradient(to bottom, #73cbce, #fbf8cb);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -67,7 +68,8 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    /*color: #999999;*/
+    color: #58585b;
 }
 
 .sidebar-nav li a:hover {
@@ -88,7 +90,8 @@
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    /*color: #999999;*/
+    color: #58585b;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
